# Liku-extensions

./: .coverage  .gitignore  PHASE2-COMPLETION-SUMMARY.md  README.md  TIER2-EXECUTIVE-SUMMARY.md  TIER2-VERIFICATION-CHECKLIST.md  agent_runner.py  bookkeeper.py  coverage.xml  database.py  install.sh  liku_cli.py  liku_memory.db  package-lock.json  pyproject.toml  read_logs.py  requirements.txt  setup_dev.py  spawn_and_interact.py  spawn_util.py  streaming_cli.py  streaming_dashboard.css  streaming_dashboard.py  tay_cli.css  tay_cli.py  uninstall.sh
.github/workflows/: tests.yml  yolo-supervisor.yml
Ideas/: extension-brainstorming  extension-brainstorming-MAOIS  extension-brainstorming-RFC-007-AISTOP  extension-brainstorming-idea.md  extension-brainstorming-protocol  extension-brainstorming-tty
agents/SnapshotAgent/: agent.json  handler.sh  run.sh
agents/build-agent/: agent.json  handler.sh  run.sh
agents/joke-agent/: agent.json  joke_agent.py
agents/lint-agent/: agent.json  handler.sh  run.sh
agents/templates/: agent-template.sh  config-template.yaml  metadata-template.json
agents/test-agent/: agent.json  handler.sh  run.sh
bookkeeper/: agent-table.sh  hotkeys.sh  pane-table.sh  tui-input-loop.sh  tui-layout.sh  tui-refresh-loop.sh  tui-signals.sh  ui.sh
config/: agents.yaml  liku.yaml  paths.yaml
core/: __init__.py  cli-environment.sh  context-store.sh  doc_generator.py  doctor.sh  event-bus.sh  event_bus.py  liku_client.py  liku_daemon.py  orchestrator.sh  pid-tools.sh  preflight-check.sh  runtime.sh  safety-guards.sh  state-machine.sh  state_backend.py  subagent-engine.sh  terminalID.sh  tmux-agent.sh  tmux-recovery.sh  tmux_manager.py  watcher_factory.py  window_manager.py
core/sandbox/: base.py  docker_backend.py  factory.py  tmux_backend.py
docs/: PHASE2.5-IMPROVEMENTS.md  PHASE2.5-SUMMARY.md  PROGRESS-REPORT-2025-11-16.md  QUICKSTART.md  architecture-evolution.md  architecture.md  bookkeeper.md  event-bus.md  foundation-plan.md  foundation-pr-checklist.md  foundation-pr-draft.md  installation.md  protocol.md  rubric.md  session_updates_summary.md  testing.md  tier2-implementation-roadmap.md  tier2-optimization-review.md  tier2-quickstart.md
liku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
notebooks/: tier2-improvement-plan.ipynb
schemas/: agents.schema.json  events.schema.json
tests/: conftest.py  run_all_tests.py  test_doc_generator.py  test_docker_sandbox.py  test_event_bus.py  test_event_bus_pytest.py  test_liku_client.py  test_liku_daemon.py  test_state_backend.py  test_tmux_manager.py  test_tmux_manager_pytest.py  test_watcher_factory.py
tests/integration/: __init__.py  test_full_system.py
